ie11 button overflow issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -44,11 +44,13 @@ button {
 	margin-top:24px;
 	
 	& > * {
-		flex:0 0 48%;
+		flex:0 0;
+		flex-basis:48px;
 	}
 
 	& > *:only-child {
-		flex:0 0 100%;
+		flex:0 0;
+		flex-basis:100%;
 	}
 
 	button {
@@ -162,7 +164,7 @@ button {
 	align-items:center;
 	justify-content:center;
 	text-align:center;
-	font-size:0.85rem;
+	font-size:0.8rem;
 }
 
 .counter.warning {
