--- a/src/tabs/Home/Home.scss
+++ b/src/tabs/Home/Home.scss
@@ -10,6 +10,7 @@
 .news-item .news-item-content {
 	font-size:0.85em;
 	margin-top:12px;
+	width:100%;
 }
 
 
